Allow empty groups to be collapsed.  Make sure all of header shows pointer cursor
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@16149 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_contacts.scss
+++ b/src/main/resources/scss/_contacts.scss
@@ -37,6 +37,10 @@ $over-color: #f4f3f3;
 		padding-right: 10px;
 		@include contact-header;
 
+		span{
+			cursor: pointer;
+		}
+
 		.x-tool {
 			height: 20px;
 			margin-left: 0px;
